--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,15 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+bevy = { version = "0.6", features = ["dynamic", "bevy_render"] }
+bevy_rapier3d = ">=0.12.1"
+bevy_backroll = ">=0.3.0"
+leafwing-input-manager = "0.2.0"
+leafwing_input_manager_macros = "0.2.0"
+
+[profile.dev.package.bevy_rapier3d]
+opt-level = 3
+
+[patch.crates-io]
+# override it with bevy from git
+bevy = { git = "https://github.com/bevyengine/bevy", rev = "d8974e7c3d84189313268f475ceeff9393cedffa" }
