--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,8 +9,6 @@ edition = "2021"
 bevy = { version = "0.6", features = ["dynamic", "bevy_render"] }
 bevy_rapier3d = ">=0.12.1"
 bevy_backroll = ">=0.3.0"
-leafwing-input-manager = "0.2.0"
-leafwing_input_manager_macros = "0.2.0"
 
 [profile.dev.package.bevy_rapier3d]
 opt-level = 3
@@ -18,3 +16,7 @@ opt-level = 3
 [patch.crates-io]
 # override it with bevy from git
 bevy = { git = "https://github.com/bevyengine/bevy" }
+bevy_app = { git = "https://github.com/bevyengine/bevy" }
+bevy_ecs = { git = "https://github.com/bevyengine/bevy" }
+bevy_core = { git = "https://github.com/bevyengine/bevy" }
+
