--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ bevy = { version = "0.6", features = ["dynamic", "bevy_render"] }
 bevy_rapier3d = ">=0.12.1"
 bevy_backroll = ">=0.3.0"
 bevy_atmosphere = ">=0.2.0"
+thiserror = "*"
 
 # Enable only a small amount of optimization in debug mode
 [profile.dev]
